    Add setting options to create VM (#419)
    View instance proxy device on instance view (#443)
    Add instance proxy device on instance view (#443)
    Pretty frontend URLs (#179)
    User can change project analytics duration shown
    Filtering project analytics by host & those without any usage
    Support for connecting to host over unix socket (#391)

Changed
    Use correct width for terminal on init
    Resize terminal on window resize
    Upgrade to bootstrap 5
    Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
    Only admins can create projects (#429)
    Improve user parameter display on instance events
    Improve the following modal UI / UX;
        - create project
        - create container
        - create VM
        - create network
        - create profile
        - create storage pool
    Support limits when creating a project (#434)
    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
    Support project limits on projects frontend
    Don't require filling out the image twice when deploying cloud-config
    Support choosing project when deploying cloud-config
    Only allow choosing one host when deploying cloud-config (only on frontend)
    Add cloud & desktop icons to image lists to indicate different variants
    Improve search remote image server result layout
    Use date ranges instead of created dates for project analytics
    Apply user.user-data as instance config on 1 off cloud-config deploy
    Improve the server overview UI / UX
    Account for "features" when calculating project metrics
    Count networks the same way `lxc network list` would by ignoring "unknown" & "loopback" devices
    Hide certain resource details if the user isn't admin (#452)
    Enable setting nvidia keys when creating a container (#456)
    Show image variant on import images modal
    Order host's by alias when fetching from the DB (#462)